--- a/.github/workflows/update-docs-readme-list.yml
+++ b/.github/workflows/update-docs-readme-list.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: 执行README.md更新.刷新greasyfork数据
         run: |
-          python pythonscr/update-script-list/upadate-greasyfork.py
-          python pythonscr/update-script-list/update-script-list.py
+          python utils/upadate_greasyfork.py
+          python utils/update_scripts_list.py
 
       - name: 提交和推送更改
         run: |
@@ -38,5 +38,5 @@ jobs:
           git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
           git pull
           git add .
-          git commit -n -S -m '更新脚本表格[`docs/ScriptsPath.json`]→[`/docs/README.md`]' || echo "没有需要提交的更改"
+          git commit -n -S -m 'docs: 更新脚本表格[`ScriptsPath.json`]→[`README.md`]' || echo "没有需要提交的更改"
           git push
