--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
             "files": "*.json",
             "options": {
                 "tabWidth": 2,
-                "useTabs": true
+                "useTabs": false
             }
         },
         {
