--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,8 @@
             "files": "*.json",
             "options": {
                 "tabWidth": 2,
-                "useTabs": false
+                "useTabs": false,
+                "endOfLine": "lf"
             }
         },
         {
