--- a/.github/workflows/flake8lint.yml
+++ b/.github/workflows/flake8lint.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  yamllint:
+  flake8lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository code
