feat:   :trollface:  增加功能以减少翻译量 * :trollface: * 添加[searcher.py]用于被[update_related]调用. * 直接从脚本里面读取对应的国家语言 * 显示所有信息,并且,减少翻译脚本量 * :trollface:

--- a/.github/workflows/chinagodman-commit.yml
+++ b/.github/workflows/chinagodman-commit.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Escape backticks in commit msg
         env:
