--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -22,6 +22,13 @@ jobs:
         run: |
           pip install markdown
 
+      - name: 检查新脚本
+        run: |
+          python utils/update_scripts_info.py
+        env:
+          GFU: ${{ secrets.GFU }}
+          GFP: ${{ secrets.GFP }}
+
       - name: 相关脚本
         run: |
           python utils/update_related_scripts.py
