fix:    :trollface:  增加自动导入到`GreasyFork` 并同步附加信息的功能.

--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -21,10 +21,11 @@ jobs:
       - name: 安装依赖
         run: |
           pip install markdown
+          pip install beautifulsoup4
 
       - name: 检查新脚本
         run: |
-          python utils/update_scripts_info.py
+          python utils/script-import-sync.py
         env:
           GFU: ${{ secrets.GFU }}
           GFP: ${{ secrets.GFP }}
