--- a/.github/workflows/chinagodman-commit.yml
+++ b/.github/workflows/chinagodman-commit.yml
@@ -3,7 +3,7 @@ name: 人民的勤务员更新脚本
 on:
   push:
     paths:
-      - "**/*.js" #新的脚本被提交或者被修改了.
+      - "**/*.js" # 新的脚本被提交或者被修改了.
   workflow_dispatch:
 
 concurrency:
@@ -30,9 +30,8 @@ jobs:
         env:
           COMMIT_MSG: ${{ github.event.head_commit.message }}
         run: |
-          echo "ESCAPED_MSG<<EOF" >> $GITHUB_ENV
-          echo "$COMMIT_MSG" | sed 's/`/\`/g' >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          ESCAPED_MSG="$COMMIT_MSG"
+          echo "ESCAPED_MSG=$ESCAPED_MSG" >> "$GITHUB_ENV"
 
       - name: 根目录脚本__更新py
         run: |
@@ -44,5 +43,5 @@ jobs:
           git config --global user.signingkey  "${{ secrets.GPG_PRIVATE_ID }}"
           git pull
           git add .
-          git commit -n  -S -m "$ESCAPED_MSG" || echo "没有需要提交的更改"
+          git commit -n -S -m "$ESCAPED_MSG" || echo "没有需要提交的更改"
           git push
