改为`github-script`流程🤖用于部署签名

--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -19,7 +19,7 @@ jobs:
             const { repo: { owner, repo } } = context;
             const pr = context.payload.pull_request;
 
-            if (pr.user.login !== 'ChinaGodMan') {
+            if (pr.user.login !== 'dependabot[bot]') {
               console.log('Not Dependabot pull request');
               return;
             }
