--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -35,5 +35,5 @@ jobs:
           git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
           git config --global commit.gpgSign true
           git add docs/README.md
-          git commit -n -S -m "更新[\`README.md\`]内贡献者列表" || echo "没有需要提交的更改"
+          git commit -n -S -m "docs(ci): 📝 更新[\`README.md\`]内贡献者列表" || echo "没有需要提交的更改"
           git push
