--- a/.github/workflows/chinagodman-commit.yml
+++ b/.github/workflows/chinagodman-commit.yml
@@ -17,7 +17,7 @@ jobs:
     env:
       GIT_AUTHOR_NAME: ${{ github.event.commits[0].author.name }}
       GIT_AUTHOR_EMAIL: ${{ github.event.commits[0].author.email  }}
-      GIT_COMMITTER_NAME: qinwuyuan-sync-bot
+      GIT_COMMITTER_NAME: ChinaGodBot
       GIT_COMMITTER_EMAIL: "${{ secrets.GPG_PRIVATE_EMAIL }}"
 
     steps:
