--- a/.github/workflows/assign-issue-to-creator.yml
+++ b/.github/workflows/assign-issue-to-creator.yml
@@ -11,7 +11,7 @@ jobs:
       - name: 自动分配人民的勤务员
         uses: actions/github-script@v7
         with:
-          #github-token: ${{ secrets.BOT_TOKEN }}
+          github-token: ${{ secrets.QWY_SYNC_BOT_TOKEN }}
           script: |
             const issueOwner = context.repo.owner;
             github.rest.issues.addAssignees({
