--- a/.github/workflows/assign-pr-to-creator.yml
+++ b/.github/workflows/assign-pr-to-creator.yml
@@ -18,7 +18,7 @@ jobs:
       - name: 自动分配审查和受理至人民的勤务员
         uses: actions/github-script@v7
         with:
-          #github-token: ${{ secrets.BO_TOKEN }}
+          github-token: ${{ secrets.QWY_SYNC_BOT_TOKEN }}
           script: |
             const prOwner = context.repo.owner;
             const pullRequest = context.payload.pull_request;
