ci: 🎡 使用`勤务员的小助手`

--- a/.github/workflows/add-reviewed-by.yml
+++ b/.github/workflows/add-reviewed-by.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: ChinaGodMan/add-reviewed-by-action@main
         with:
-          github-token: ${{ secrets.BOT_TOKEN }}
+          github-token: ${{ secrets.QWY_SYNC_BOT_TOKEN }}
