feat(ci): ✨ 重新启用格式化工作流 * 如果脚本ID为空，此次脚本是首次导入 * 首次导入不格式化，将被[utils/script-import-sync.py]格式化

--- a/.github/workflows/chinagodman-commit.yml
+++ b/.github/workflows/chinagodman-commit.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: 根目录脚本__更新py
         run: |
-          python utils/copy_js_files.py
+          python utils/format-changed-scripts.py
 
       - name: 提交和推送更改
         run: |
