--- a/.github/workflows/translate-repo-md.yml
+++ b/.github/workflows/translate-repo-md.yml
@@ -29,5 +29,5 @@ jobs:
           git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
           git pull
           git add .
-          git commit -n -S -m "docs(ci): 📝 谷歌翻译[\`README.md\`]→[\`{vi,ko,en,jp,zh-TW}/README.md\`]" || echo "没有需要提交的更改"
+          git commit -n -S -m "docs(ci): 📝 强制翻译[\`docs/README.md\`]→[\`[vi,ko,en,jp,zh-TW]/README.md\`],以保持仓库自述同步" || echo "没有需要提交的更改"
           git push
