feat(git): ✨ :trollface: 推送失败时使用`rebase`重试一次（百分之一概率`push`会产生冲突）

--- a/.github/workflows/chinagodman-commit.yml
+++ b/.github/workflows/chinagodman-commit.yml
@@ -45,4 +45,4 @@ jobs:
           git pull
           git add .
           git commit -n -S -m "$ESCAPED_MSG" || echo "没有需要提交的更改"
-          git push
+          git push || git pull --rebase && git push
