--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -70,4 +70,4 @@ jobs:
                       -m "所有脚本:docs/ScriptsPath.json[script.relatedscripts] → README_[lang].md" \
                       -m "语言导航: → README_[lang].md" \
           || echo "没有需要提交的更改"
-          git push
+          git push || git pull --rebase && git push
