--- a/.github/workflows/update-docs-readme-list.yml
+++ b/.github/workflows/update-docs-readme-list.yml
@@ -38,4 +38,4 @@ jobs:
           git pull
           git add .
           git commit -n -S -m "docs(ci): 📝 更新脚本表格[\`ScriptsPath.json\`]→[\`README.md\`]" || echo "没有需要提交的更改"
-          git push
+          git push || git pull --rebase && git push
