--- a/.github/workflows/translate-scripts-md.yml
+++ b/.github/workflows/translate-scripts-md.yml
@@ -30,4 +30,4 @@ jobs:
           git pull
           git add .
           git commit -n -S -m "docs(ci): 📝 谷歌翻译[\`README_[lang].md\`]"  || echo "没有需要提交的更改"
-          git push
+          git push || git pull --rebase && git push
