--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -36,4 +36,4 @@ jobs:
           git config --global commit.gpgSign true
           git add docs/README.md
           git commit -n -S -m "docs(ci): 📝 更新[\`README.md\`]内贡献者列表" || echo "没有需要提交的更改"
-          git push
+          git push || git pull --rebase && git push
