ci(git): 🎡 配置`Git`的代码迁移到单独的集中，方便管理

--- a/.github/workflows/chinagodman-commit.yml
+++ b/.github/workflows/chinagodman-commit.yml
@@ -37,12 +37,16 @@ jobs:
       - name: 根目录脚本__更新py
         run: |
           python utils/format-changed-scripts.py
-
-      - name: 提交和推送更改
+      - name: 设置机器人提交
         run: |
           gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
-          git config --global user.signingkey  "${{ secrets.GPG_PRIVATE_ID }}"
+          git config --global commit.gpgsign true
+          git config --global user.name 'ChinaGodBot'
+          git config --global user.email "${{ secrets.GPG_PRIVATE_EMAIL }}"
+          git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
+      - name: 提交和推送更改
+        run: |
           git pull
           git add .
-          git commit -n -S -m "$ESCAPED_MSG" || echo "没有需要提交的更改"
+          git commit -n -m "$ESCAPED_MSG" || true
           git push || git pull --rebase && git push
