--- a/.github/workflows/translate-repo-md.yml
+++ b/.github/workflows/translate-repo-md.yml
@@ -20,14 +20,16 @@ jobs:
       - name: 读取并翻译 README
         run: |
           python utils/translate_force_chinese_to_lang.py
-
-      - name: 提交和推送更改
+      - name: 设置机器人提交
         run: |
           gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
+          git config --global commit.gpgsign true
           git config --global user.name 'ChinaGodBot'
           git config --global user.email "${{ secrets.GPG_PRIVATE_EMAIL }}"
           git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
+      - name: 提交和推送更改
+        run: |
           git pull
           git add .
-          git commit -n -S -m "docs(ci): 📝 强制翻译[\`docs/README.md\`]→[\`[vi,ko,en,jp,zh-TW]/README.md\`],以保持仓库自述同步" || echo "没有需要提交的更改"
+          git commit -n -m "docs(ci): 📝 强制翻译[\`docs/README.md\`]→[\`[vi,ko,en,jp,zh-TW]/README.md\`],以保持仓库自述同步" || true
           git push || git pull --rebase && git push
