--- a/.github/workflows/translate-scripts-md.yml
+++ b/.github/workflows/translate-scripts-md.yml
@@ -20,14 +20,16 @@ jobs:
       - name: 读取并翻译 README
         run: |
           python utils/translate_chinese_to_filelang.py
-
-      - name: 提交和推送更改
+      - name: 设置机器人提交
         run: |
           gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
+          git config --global commit.gpgsign true
           git config --global user.name 'ChinaGodBot'
           git config --global user.email "${{ secrets.GPG_PRIVATE_EMAIL }}"
           git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
+      - name: 提交和推送更改
+        run: |
           git pull
           git add .
-          git commit -n -S -m "docs(ci): 📝 谷歌翻译[\`README_[lang].md\`]"  || echo "没有需要提交的更改"
+          git commit -n -m "docs(ci): 📝 谷歌翻译[\`README_[lang].md\`]"  || true
           git push || git pull --rebase && git push
