ci: 🎡  :trollface: (修复)推送失败时使用`rebase`重试一次（百分之一概率`push`会产生冲突）

--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -72,4 +72,8 @@ jobs:
                       -m "所有脚本:docs/ScriptsPath.json[script.relatedscripts] → README_[lang].md" \
                       -m "语言导航: → README_[lang].md" \
           || true
-          git push || git pull --rebase && git push
+          git push
+          if [ $? -ne 0 ]; then
+            git pull --rebase
+            git push
+          fi
