--- a/.github/workflows/chinagodman-commit.yml
+++ b/.github/workflows/chinagodman-commit.yml
@@ -49,4 +49,8 @@ jobs:
           git pull
           git add .
           git commit -n -m "$ESCAPED_MSG" || true
-          git push || git pull --rebase && git push
+          git push
+          if [ $? -ne 0 ]; then
+            git pull --rebase
+            git push
+          fi
