--- a/.github/workflows/update-docs-readme-list.yml
+++ b/.github/workflows/update-docs-readme-list.yml
@@ -40,4 +40,8 @@ jobs:
           git pull
           git add .
           git commit -n -m "docs(ci): 📝 更新脚本表格[\`ScriptsPath.json\`]→[\`README.md\`]" || true
-          git push || git pull --rebase && git push
+          git push
+          if [ $? -ne 0 ]; then
+            git pull --rebase
+            git push
+          fi
