ci(github): 🎡 推送用户改为`ChinaGodBot`

--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.QWY_SYNC_BOT_TOKEN }}
+          repository: ChinaGodMan/UserScripts
 
       - name: 安装依赖
         run: |
