--- a/.github/workflows/update-docs-readme-list.yml
+++ b/.github/workflows/update-docs-readme-list.yml
@@ -20,6 +20,9 @@ jobs:
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.QWY_SYNC_BOT_TOKEN }}
+          repository: ChinaGodMan/UserScripts
 
       - name: Install dependencies
         run: |
