--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -3,13 +3,8 @@ name: merge-change-history
 on:
   push:
     paths:
-      - "**/Change history/README.md" # 增加了新历史说明
-      #- 'docs/ScriptsPath.json'  # 也在 docs/ScriptsPath.json 文件发生变动时触发 修改了新说明.
+      - "**/Change history/README.md" # 更新日志
   workflow_dispatch:
-
-concurrency:
-  group: update-qinwuyuan-UserScripts
-  cancel-in-progress: false
 
 jobs:
   run-python:
