--- a/.github/workflows/update-docs-readme-list.yml
+++ b/.github/workflows/update-docs-readme-list.yml
@@ -3,15 +3,10 @@ name: update-docs-readme-list
 on:
   workflow_run:
     workflows:
-      - "update-scripts-version" #触发了自动更新.
-      - "merge-change-history" #触发了合并历史记录,可能json文件被改变,
+      - "merge-change-history" # 操作所有raedme.md后刷新[docs/README.md]中的列表
     types:
       - completed
   workflow_dispatch:
-
-concurrency:
-  group: update-qinwuyuan-UserScripts-2
-  cancel-in-progress: false
 
 jobs:
   update-script-list:
