build: 📦️ 关闭保存时自动格式化`md`文件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
   },
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.wordWrap": "off"
+    "editor.wordWrap": "off",
+    "editor.formatOnSave": false
   },
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
