ci(时区): 让`ChinaGodBot`的`git`提交记录时区和自己提交的保持一致性

--- a/.github/workflows/merge-change-history.yml
+++ b/.github/workflows/merge-change-history.yml
@@ -9,12 +9,13 @@ on:
 jobs:
   run-python:
     runs-on: ubuntu-latest
+    env:
+      TZ: Asia/Shanghai
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.QWY_SYNC_BOT_TOKEN }}
-          repository: ChinaGodMan/UserScripts
           fetch-depth: 0 #检查时间用.
 
       - name: 安装依赖
