--- a/.github/workflows/chinagodman-commit.yml
+++ b/.github/workflows/chinagodman-commit.yml
@@ -11,6 +11,7 @@ jobs:
     if: ${{ github.event.commits[0].committer.username != 'ChinaGodBot' }}
     runs-on: ubuntu-latest
     env:
+      TZ: Asia/Shanghai
       GIT_AUTHOR_NAME: ${{ github.event.commits[0].author.name }}
       GIT_AUTHOR_EMAIL: ${{ github.event.commits[0].author.email  }}
       GIT_COMMITTER_NAME: ChinaGodBot
@@ -21,7 +22,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.QWY_SYNC_BOT_TOKEN }}
-          repository: ChinaGodMan/UserScripts
           fetch-depth: 0
 
       - name: Escape backticks in commit msg
