--- a/.github/ISSUE_TEMPLATE/2_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/2_feature_request.yml
@@ -1,6 +1,5 @@
-name: Feature request
+name: ✨ 功能请求
 description: 提出新的功能要求或改进建议
-title: "[FEATURE] "
 labels: ["feature"]
 assignees: []
 
@@ -12,23 +11,31 @@ body:
 
         请简要描述您想要的功能或改进建议。
 
+        标题必须格式`[脚本名称]:期望功能`，例如`[外语终结者]:支持新地址`。
+
+        您可以提供屏幕截图/网页地址，以更好地显示你的想法。
+
   - type: textarea
     id: user_stories
     attributes:
-      label: 用户故事
-      description: 描述您如何使用这个新功能的场景或用户故事。
+      label: 功能要求
+      description: 描述您如何使用这个新功能的场景。
       placeholder: |
         作为一个 [角色]，我想要 [功能]，以便 [目标]。
+    validations:
+      required: true
 
   - type: textarea
     id: use_cases
     attributes:
       label: 使用场景
-      description: 列出您认为这个功能应该支持的使用场景或例子。
+      description: 列出您认为这个功能应该支持的使用场景、截图。
       placeholder: |
         1. 使用场景 1
         2. 使用场景 2
         3. 使用场景 3
+    validations:
+      required: true
 
   - type: textarea
     id: additional_info
